# core

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  appveyor.yml
src/: book.rs  bookcompiler.rs  error.rs  github.rs  macros.rs  main.rs  templates.rs  vcs.rs
src/github/: schema.json
