[package]
name = "core"
version = "0.1.0"
authors = ["Akhil kp <akhilkpdasan@gmail.com>"]

[dependencies]
actix-web = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.5.13"
git2 = "0.8.0"
xdg = "2.2.0"
toml = "0.4"
chrono = "0.4"
tempdir = "0.3.7"
sha1 = "0.6.0"
walkdir = "2.2.7"
