[package]
name = "core"
version = "0.3.0"
authors = ["Akhil kp <akhilkpdasan@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.5.13"
git2 = "0.8.0"
toml = "0.4"
chrono = "0.4"
tempdir = "0.3.7"
sha1 = "0.6.0"
walkdir = "2.2.7"
app_dirs = "1.2.1"
graphql_client = "0.6.0"
reqwest = "0.9.8"
http = "0.1.14"
log = "0.4.6"
wkhtmltopdf = "0.3.0"
actix = "0.7.9"
futures = "0.1.25"
